--- a/Figure_clusterProfiler_asis.Rmd
+++ b/Figure_clusterProfiler_asis.Rmd
@@ -37,8 +37,9 @@ library(enrichplot)
 
 ```{r echo=TRUE}
 # File name with the results of edgeR analysis
-fileName <- "results/DEGs_C231_CRISPR1_vs_231_noCRISPR_hg38.xlsx"
-logFC    <- TRUE      # Are we using column 3: "logFC" or 6: "PValue"?
+data_dir       <- "/Users/mdozmorov/Documents/Work/VCU_work/Ivanov_ANIL/" # Working directory
+fileName_rna   <- paste0(data_dir, "results_for_manuscript/DEGs_C231_CRISPR1_vs_231_noCRISPR_hg38.xlsx") # File to save all results of differential expression analysis
+logFC    <- FALSE      # Are we using column 3: "logFC" or 6: "PValue"?
 # Analysis settings
 p_adj_cutoff   <- 0.2 # FDR cutoff
 analysis_name  = "Analysis1" # Analysis name, to prefix file names for figures
@@ -62,9 +63,11 @@ if (human) {
 set.seed(1)
 ```
 
+## Differential genes
+
 ```{r}
 # Get gene IDs and the corresponding effect size
-degs.all <- read.xlsx(fileName, sheet = 1, cols = c(1, 3, 6)) # edgeR output in the 1st sheet, columns 1: "Geneid", 3: "logFC" 6: "PValue"
+degs.all <- read.xlsx(fileName_rna, sheet = 1, cols = c(1, 3, 6)) # edgeR output in the 1st sheet, columns 1: "Geneid", 3: "logFC" 6: "PValue"
 if (logFC) { # Select genes by maximum logFC
   degs.all <- degs.all[order(abs(degs.all$logFC), decreasing = TRUE), ] # Sort by absolute logFC
   degs.all <- degs.all[1:min(nrow(degs.all), max_kegg_genes), ]         # Select maximum number of genes, or less
@@ -81,28 +84,30 @@ if (logFC) { # Select genes by maximum logFC
   geneList.up  <- geneList.all[geneList.all > 0]
   geneList.up  <- geneList.up[order(geneList.up, decreasing = TRUE)]
   geneList.dn  <- geneList.all[geneList.all < 0]
-  geneList.dn  <- abs(geneList.dn) # Make absolute values for sorting
-  geneList.dn  <- geneList.dn[order(geneList.dn, decreasing = FALSE)]
+  geneList.dn  <- geneList.dn[order(geneList.dn, decreasing = TRUE)]
 } else { # Select genes by smallest p-value
-  degs.all <- degs.all[order(degs.all$PValue, decreasing = FALSE), ] # Sort by smallest p-value
+  # degs.all <- degs.all[order(degs.all$PValue, decreasing = FALSE), ] # Sort by smallest p-value
   degs.all <- degs.all[1:min(nrow(degs.all), max_kegg_genes), ]      # Select maximum number of genes, or less
   # Convert symbols to entrezids
-  eid <- bitr(degs.all$Geneid, fromType="ENSEMBL", toType="ENTREZID", OrgDb=org_db)
+  eid <- clusterProfiler::bitr(degs.all$Geneid, fromType="ENSEMBL", toType="ENTREZID", OrgDb=org_db)
   # Attach converted entrezids
   degs.all <- left_join(degs.all, eid, by = c("Geneid" = "ENSEMBL"))
   degs.all <- degs.all[ complete.cases(degs.all), ] # Keep only successfully converted entries
   # Prepare full gene list
   geneList.all <- -log10(degs.all$PValue)  # Use -log10-transformed 
-  geneList.all[is.infinite(geneList.all)] <- -log10(.Machine$double.xmin) # Avoid infinite -log10 p-values
+  # geneList.all[is.infinite(geneList.all)] <- -log10(.Machine$double.xmin) # Avoid infinite -log10 p-values
+  geneList.all[is.infinite(geneList.all)] <- max(geneList.all[!is.infinite(geneList.all)]) # Avoid infinite -log10 p-values
   names(geneList.all) <- degs.all$ENTREZID # Make it named
   geneList.all <- geneList.all[order(geneList.all, decreasing = TRUE)] # Sort
   # Prepare separate up- and downregulated gene lists
   geneList.up        <- -log10(degs.all$PValue[degs.all$logFC > 0])
-  geneList.up[is.infinite(geneList.up)] <- -log10(.Machine$double.xmin) # Avoid infinite -log10 p-values
+  # geneList.up[is.infinite(geneList.up)] <- -log10(.Machine$double.xmin) # Avoid infinite -log10 p-values
+  geneList.up[is.infinite(geneList.up)] <- max(geneList.up[!is.infinite(geneList.up)]) # Avoid infinite -log10 p-values
   names(geneList.up) <- degs.all$ENTREZID[degs.all$logFC > 0]
   geneList.up        <- geneList.up[order(geneList.up, decreasing = TRUE)]
   geneList.dn        <- -log10(degs.all$PValue[degs.all$logFC < 0])
-  geneList.dn[is.infinite(geneList.dn)] <- -log10(.Machine$double.xmin) # Avoid infinite -log10 p-values
+  # geneList.dn[is.infinite(geneList.dn)] <- -log10(.Machine$double.xmin) # Avoid infinite -log10 p-values
+  geneList.dn[is.infinite(geneList.dn)] <- max(geneList.dn[!is.infinite(geneList.dn)]) # Avoid infinite -log10 p-values
   names(geneList.dn) <- degs.all$ENTREZID[degs.all$logFC < 0]
   geneList.dn        <- geneList.dn[order(geneList.dn, decreasing = TRUE)]
 }
@@ -134,16 +139,17 @@ if (nrow(ego3.summary) > 0) {
   # ego3.summary <- ego3.summary[order(ego3.summary$pvalue, decreasing = FALSE), ]
   ego3_to_plot <- data.frame(GO = paste0(ego3.summary$ID[1:min(nrow(ego3.summary), max_GO_to_plot)], " ", 
                                          ego3.summary$Description[1:min(nrow(ego3.summary), max_GO_to_plot)]),
-                             NES = ego3.summary$NES[1:min(nrow(ego3.summary), max_GO_to_plot)]) # Normalized enrichment score
+                             NES = ego3.summary$NES[1:min(nrow(ego3.summary), max_GO_to_plot)], # Normalized enrichment score
+                             PVAL = -log10(ego3.summary$p.adjust[1:min(nrow(ego3.summary), max_GO_to_plot)]))
   # ego3_to_plot    <- ego3_to_plot[order(ego3_to_plot$NES, decreasing = FALSE), ]  # Sort by NES
   ego3_to_plot$GO <- factor(ego3_to_plot$GO, levels = rev(ego3_to_plot$GO)) # Adjust factor order
   # Plot the results
-  ggplot(data = ego3_to_plot, aes(x = GO, y = NES)) +
+  ggplot(data = ego3_to_plot, aes(x = GO, y = PVAL)) +
     geom_bar(stat = "Identity", width = 0.8, color = "black", fill = "red") +
     theme(axis.text.x = element_text(angle = 90, hjust = 1)) +
     coord_flip() +
     scale_fill_gradient(low="blue", high="red") +
-    labs(y = "Normalized Enrichment Score")
+    labs(y = "-log10(adjusted p-value)")
   # ggsave(filename = paste0(analysis_name, "_GOMF_all.png"), width = 12, height = 3, units = "in")
 }
 ```
@@ -198,16 +204,17 @@ if (nrow(ego3.up.summary) > 0) {
   # ego3.up.summary <- ego3.up.summary[order(ego3.up.summary$pvalue, decreasing = FALSE), ]
   ego3_to_plot <- data.frame(GO = paste0(ego3.up.summary$ID[1:min(nrow(ego3.up.summary), max_GO_to_plot)], " ", 
                                          ego3.up.summary$Description[1:min(nrow(ego3.up.summary), max_GO_to_plot)]),
-                             NES = ego3.up.summary$NES[1:min(nrow(ego3.up.summary), max_GO_to_plot)]) # Normalized enrichment score
+                             NES = ego3.up.summary$NES[1:min(nrow(ego3.up.summary), max_GO_to_plot)], # Normalized enrichment score
+                             PVAL = -log10(ego3.up.summary$p.adjust[1:min(nrow(ego3.up.summary), max_GO_to_plot)]))
   # ego3_to_plot    <- ego3_to_plot[order(ego3_to_plot$NES, decreasing = FALSE), ]  # Sort by NES
   ego3_to_plot$GO <- factor(ego3_to_plot$GO, levels = rev(ego3_to_plot$GO)) # Adjust factor order
   # Plot the results
-  ggplot(data = ego3_to_plot, aes(x = GO, y = NES)) +
+  ggplot(data = ego3_to_plot, aes(x = GO, y = PVAL)) +
     geom_bar(stat = "Identity", width = 0.8, color = "black", fill = "red") +
     theme(axis.text.x = element_text(angle = 90, hjust = 1)) +
     coord_flip() +
     scale_fill_gradient(low="blue", high="red") +
-    labs(y = "Normalized Enrichment Score")
+    labs(y = "-log10(adjusted p-value)")
   # ggsave(filename = paste0(analysis_name, "_GOMF_all.png"), width = 12, height = 3, units = "in")
 }
 ```
@@ -241,16 +248,17 @@ if (nrow(ego3.dn.summary) > 0) {
   # ego3.dn.summary <- ego3.dn.summary[order(ego3.dn.summary$pvalue, decreasing = FALSE), ]
   ego3_to_plot <- data.frame(GO = paste0(ego3.dn.summary$ID[1:min(nrow(ego3.dn.summary), max_GO_to_plot)], " ", 
                                          ego3.dn.summary$Description[1:min(nrow(ego3.dn.summary), max_GO_to_plot)]),
-                             NES = ego3.dn.summary$NES[1:min(nrow(ego3.dn.summary), max_GO_to_plot)]) # Normalized enrichment score
+                              NES = ego3.dn.summary$NES[1:min(nrow(ego3.dn.summary), max_GO_to_plot)], # Normalized enrichment score
+                             PVAL = -log10(ego3.dn.summary$p.adjust[1:min(nrow(ego3.dn.summary), max_GO_to_plot)]))
   # ego3_to_plot    <- ego3_to_plot[order(ego3_to_plot$NES, decreasing = FALSE), ]  # Sort by NES
   ego3_to_plot$GO <- factor(ego3_to_plot$GO, levels = rev(ego3_to_plot$GO)) # Adjust factor order
   # Plot the results
-  ggplot(data = ego3_to_plot, aes(x = GO, y = NES)) +
+  ggplot(data = ego3_to_plot, aes(x = GO, y = PVAL)) +
     geom_bar(stat = "Identity", width = 0.8, color = "black", fill = "red") +
     theme(axis.text.x = element_text(angle = 90, hjust = 1)) +
     coord_flip() +
     scale_fill_gradient(low="blue", high="red") +
-    labs(y = "Normalized Enrichment Score")
+    labs(y = "-log10(adjusted p-value)")
   # ggsave(filename = paste0(analysis_name, "_GOMF_all.png"), width = 12, height = 3, units = "in")
 }
 ```
@@ -297,16 +305,17 @@ if (nrow(ego3.summary) > 0) {
   # ego3.summary <- ego3.summary[order(ego3.summary$pvalue, decreasing = FALSE), ]
   ego3_to_plot <- data.frame(GO = paste0(ego3.summary$ID[1:min(nrow(ego3.summary), max_GO_to_plot)], " ", 
                                          ego3.summary$Description[1:min(nrow(ego3.summary), max_GO_to_plot)]),
-                             NES = ego3.summary$NES[1:min(nrow(ego3.summary), max_GO_to_plot)]) # Normalized enrichment score
+                             NES = ego3.summary$NES[1:min(nrow(ego3.summary), max_GO_to_plot)], # Normalized enrichment score
+                             PVAL = -log10(ego3.summary$p.adjust[1:min(nrow(ego3.summary), max_GO_to_plot)]))
   # ego3_to_plot    <- ego3_to_plot[order(ego3_to_plot$NES, decreasing = FALSE), ]  # Sort by NES
   ego3_to_plot$GO <- factor(ego3_to_plot$GO, levels = rev(ego3_to_plot$GO)) # Adjust factor order
   # Plot the results
-  ggplot(data = ego3_to_plot, aes(x = GO, y = NES)) +
+  ggplot(data = ego3_to_plot, aes(x = GO, y = PVAL)) +
     geom_bar(stat = "Identity", width = 0.8, color = "black", fill = "red") +
     theme(axis.text.x = element_text(angle = 90, hjust = 1)) +
     coord_flip() +
     scale_fill_gradient(low="blue", high="red") +
-    labs(y = "Normalized Enrichment Score")
+    labs(y = "-log10(adjusted p-value)")
   # ggsave(filename = paste0(analysis_name, "_GOMF_all.png"), width = 12, height = 3, units = "in")
 }
 ```
@@ -361,16 +370,17 @@ if (nrow(ego3.up.summary) > 0) {
   # ego3.up.summary <- ego3.up.summary[order(ego3.up.summary$pvalue, decreasing = FALSE), ]
   ego3_to_plot <- data.frame(GO = paste0(ego3.up.summary$ID[1:min(nrow(ego3.up.summary), max_GO_to_plot)], " ", 
                                          ego3.up.summary$Description[1:min(nrow(ego3.up.summary), max_GO_to_plot)]),
-                             NES = ego3.up.summary$NES[1:min(nrow(ego3.up.summary), max_GO_to_plot)]) # Normalized enrichment score
-  # ego3_to_plot    <- ego3_to_plot[order(ego3_to_plot$NES, decreasing = FALSE), ]  # Sort by NES
+                              NES = ego3.up.summary$NES[1:min(nrow(ego3.up.summary), max_GO_to_plot)], # Normalized enrichment score
+                             PVAL = -log10(ego3.up.summary$p.adjust[1:min(nrow(ego3.up.summary), max_GO_to_plot)]))
+ # ego3_to_plot    <- ego3_to_plot[order(ego3_to_plot$NES, decreasing = FALSE), ]  # Sort by NES
   ego3_to_plot$GO <- factor(ego3_to_plot$GO, levels = rev(ego3_to_plot$GO)) # Adjust factor order
   # Plot the results
-  ggplot(data = ego3_to_plot, aes(x = GO, y = NES)) +
+  ggplot(data = ego3_to_plot, aes(x = GO, y = PVAL)) +
     geom_bar(stat = "Identity", width = 0.8, color = "black", fill = "red") +
     theme(axis.text.x = element_text(angle = 90, hjust = 1)) +
     coord_flip() +
     scale_fill_gradient(low="blue", high="red") +
-    labs(y = "Normalized Enrichment Score")
+    labs(y = "-log10(adjusted p-value)")
   # ggsave(filename = paste0(analysis_name, "_GOMF_all.png"), width = 12, height = 3, units = "in")
 }
 ```
@@ -404,16 +414,17 @@ if (nrow(ego3.dn.summary) > 0) {
   # ego3.dn.summary <- ego3.dn.summary[order(ego3.dn.summary$pvalue, decreasing = FALSE), ]
   ego3_to_plot <- data.frame(GO = paste0(ego3.dn.summary$ID[1:min(nrow(ego3.dn.summary), max_GO_to_plot)], " ", 
                                          ego3.dn.summary$Description[1:min(nrow(ego3.dn.summary), max_GO_to_plot)]),
-                             NES = ego3.dn.summary$NES[1:min(nrow(ego3.dn.summary), max_GO_to_plot)]) # Normalized enrichment score
+                              NES = ego3.dn.summary$NES[1:min(nrow(ego3.dn.summary), max_GO_to_plot)], # Normalized enrichment score
+                             PVAL = -log10(ego3.dn.summary$p.adjust[1:min(nrow(ego3.dn.summary), max_GO_to_plot)]))
   # ego3_to_plot    <- ego3_to_plot[order(ego3_to_plot$NES, decreasing = FALSE), ]  # Sort by NES
   ego3_to_plot$GO <- factor(ego3_to_plot$GO, levels = rev(ego3_to_plot$GO)) # Adjust factor order
   # Plot the results
-  ggplot(data = ego3_to_plot, aes(x = GO, y = NES)) +
+  ggplot(data = ego3_to_plot, aes(x = GO, y = PVAL)) +
     geom_bar(stat = "Identity", width = 0.8, color = "black", fill = "red") +
     theme(axis.text.x = element_text(angle = 90, hjust = 1)) +
     coord_flip() +
     scale_fill_gradient(low="blue", high="red") +
-    labs(y = "Normalized Enrichment Score")
+    labs(y = "-log10(adjusted p-value)")
   # ggsave(filename = paste0(analysis_name, "_GOMF_all.png"), width = 12, height = 3, units = "in")
 }
 ```
@@ -461,16 +472,17 @@ if (nrow(ego3.summary) > 0) {
   # ego3.summary <- ego3.summary[order(ego3.summary$pvalue, decreasing = FALSE), ]
   ego3_to_plot <- data.frame(GO = paste0(ego3.summary$ID[1:min(nrow(ego3.summary), max_GO_to_plot)], " ", 
                                          ego3.summary$Description[1:min(nrow(ego3.summary), max_GO_to_plot)]),
-                             NES = ego3.summary$NES[1:min(nrow(ego3.summary), max_GO_to_plot)]) # Normalized enrichment score
+                             NES = ego3.summary$NES[1:min(nrow(ego3.summary), max_GO_to_plot)], # Normalized enrichment score
+                             PVAL = -log10(ego3.summary$p.adjust[1:min(nrow(ego3.summary), max_GO_to_plot)]))
   # ego3_to_plot    <- ego3_to_plot[order(ego3_to_plot$NES, decreasing = FALSE), ]  # Sort by NES
   ego3_to_plot$GO <- factor(ego3_to_plot$GO, levels = rev(ego3_to_plot$GO)) # Adjust factor order
   # Plot the results
-  ggplot(data = ego3_to_plot, aes(x = GO, y = NES)) +
+  ggplot(data = ego3_to_plot, aes(x = GO, y = PVAL)) +
     geom_bar(stat = "Identity", width = 0.8, color = "black", fill = "red") +
     theme(axis.text.x = element_text(angle = 90, hjust = 1)) +
     coord_flip() +
     scale_fill_gradient(low="blue", high="red") +
-    labs(y = "Normalized Enrichment Score")
+    labs(y = "-log10(adjusted p-value)")
   # ggsave(filename = paste0(analysis_name, "_GOMF_all.png"), width = 12, height = 3, units = "in")
 }
 ```
@@ -525,16 +537,17 @@ if (nrow(ego3.up.summary) > 0) {
   # ego3.up.summary <- ego3.up.summary[order(ego3.up.summary$pvalue, decreasing = FALSE), ]
   ego3_to_plot <- data.frame(GO = paste0(ego3.up.summary$ID[1:min(nrow(ego3.up.summary), max_GO_to_plot)], " ", 
                                          ego3.up.summary$Description[1:min(nrow(ego3.up.summary), max_GO_to_plot)]),
-                             NES = ego3.up.summary$NES[1:min(nrow(ego3.up.summary), max_GO_to_plot)]) # Normalized enrichment score
+                             NES = ego3.up.summary$NES[1:min(nrow(ego3.up.summary), max_GO_to_plot)], # Normalized enrichment score
+                             PVAL = -log10(ego3.up.summary$p.adjust[1:min(nrow(ego3.up.summary), max_GO_to_plot)]))
   # ego3_to_plot    <- ego3_to_plot[order(ego3_to_plot$NES, decreasing = FALSE), ]  # Sort by NES
   ego3_to_plot$GO <- factor(ego3_to_plot$GO, levels = rev(ego3_to_plot$GO)) # Adjust factor order
   # Plot the results
-  ggplot(data = ego3_to_plot, aes(x = GO, y = NES)) +
+  ggplot(data = ego3_to_plot, aes(x = GO, y = PVAL)) +
     geom_bar(stat = "Identity", width = 0.8, color = "black", fill = "red") +
     theme(axis.text.x = element_text(angle = 90, hjust = 1)) +
     coord_flip() +
     scale_fill_gradient(low="blue", high="red") +
-    labs(y = "Normalized Enrichment Score")
+    labs(y = "-log10(adjusted p-value)")
   # ggsave(filename = paste0(analysis_name, "_GOMF_all.png"), width = 12, height = 3, units = "in")
 }
 ```
@@ -568,16 +581,17 @@ if (nrow(ego3.dn.summary) > 0) {
   # ego3.dn.summary <- ego3.dn.summary[order(ego3.dn.summary$pvalue, decreasing = FALSE), ]
   ego3_to_plot <- data.frame(GO = paste0(ego3.dn.summary$ID[1:min(nrow(ego3.dn.summary), max_GO_to_plot)], " ", 
                                          ego3.dn.summary$Description[1:min(nrow(ego3.dn.summary), max_GO_to_plot)]),
-                             NES = ego3.dn.summary$NES[1:min(nrow(ego3.dn.summary), max_GO_to_plot)]) # Normalized enrichment score
+                              NES = ego3.dn.summary$NES[1:min(nrow(ego3.dn.summary), max_GO_to_plot)], # Normalized enrichment score
+                             PVAL = -log10(ego3.dn.summary$p.adjust[1:min(nrow(ego3.dn.summary), max_GO_to_plot)]))
   # ego3_to_plot    <- ego3_to_plot[order(ego3_to_plot$NES, decreasing = FALSE), ]  # Sort by NES
   ego3_to_plot$GO <- factor(ego3_to_plot$GO, levels = rev(ego3_to_plot$GO)) # Adjust factor order
   # Plot the results
-  ggplot(data = ego3_to_plot, aes(x = GO, y = NES)) +
+  ggplot(data = ego3_to_plot, aes(x = GO, y = PVAL)) +
     geom_bar(stat = "Identity", width = 0.8, color = "black", fill = "red") +
     theme(axis.text.x = element_text(angle = 90, hjust = 1)) +
     coord_flip() +
     scale_fill_gradient(low="blue", high="red") +
-    labs(y = "Normalized Enrichment Score")
+    labs(y = "-log10(adjusted p-value)")
   # ggsave(filename = paste0(analysis_name, "_GOMF_all.png"), width = 12, height = 3, units = "in")
 }
 ```
@@ -623,16 +637,17 @@ if (nrow(ego3.summary) > 0) {
   # ego3.summary <- ego3.summary[order(ego3.summary$pvalue, decreasing = FALSE), ]
   ego3_to_plot <- data.frame(GO = paste0(ego3.summary$ID[1:min(nrow(ego3.summary), max_GO_to_plot)], " ", 
                                          ego3.summary$Description[1:min(nrow(ego3.summary), max_GO_to_plot)]),
-                             NES = ego3.summary$NES[1:min(nrow(ego3.summary), max_GO_to_plot)]) # Normalized enrichment score
+                              NES = ego3.summary$NES[1:min(nrow(ego3.summary), max_GO_to_plot)], # Normalized enrichment score
+                             PVAL = -log10(ego3.summary$p.adjust[1:min(nrow(ego3.summary), max_GO_to_plot)]))
   # ego3_to_plot    <- ego3_to_plot[order(ego3_to_plot$NES, decreasing = FALSE), ]  # Sort by NES
   ego3_to_plot$GO <- factor(ego3_to_plot$GO, levels = rev(ego3_to_plot$GO)) # Adjust factor order
   # Plot the results
-  ggplot(data = ego3_to_plot, aes(x = GO, y = NES)) +
+  ggplot(data = ego3_to_plot, aes(x = GO, y = PVAL)) +
     geom_bar(stat = "Identity", width = 0.8, color = "black", fill = "red") +
     theme(axis.text.x = element_text(angle = 90, hjust = 1)) +
     coord_flip() +
     scale_fill_gradient(low="blue", high="red") +
-    labs(y = "Normalized Enrichment Score")
+    labs(y = "-log10(adjusted p-value)")
   # ggsave(filename = paste0(analysis_name, "_GOMF_all.png"), width = 12, height = 3, units = "in")
 }
 ```
@@ -687,16 +702,17 @@ if (nrow(ego3.up.summary) > 0) {
   # ego3.up.summary <- ego3.up.summary[order(ego3.up.summary$pvalue, decreasing = FALSE), ]
   ego3_to_plot <- data.frame(GO = paste0(ego3.up.summary$ID[1:min(nrow(ego3.up.summary), max_GO_to_plot)], " ", 
                                          ego3.up.summary$Description[1:min(nrow(ego3.up.summary), max_GO_to_plot)]),
-                             NES = ego3.up.summary$NES[1:min(nrow(ego3.up.summary), max_GO_to_plot)]) # Normalized enrichment score
+                             NES = ego3.up.summary$NES[1:min(nrow(ego3.up.summary), max_GO_to_plot)], # Normalized enrichment score
+                             PVAL = -log10(ego3.up.summary$p.adjust[1:min(nrow(ego3.up.summary), max_GO_to_plot)]))
   # ego3_to_plot    <- ego3_to_plot[order(ego3_to_plot$NES, decreasing = FALSE), ]  # Sort by NES
   ego3_to_plot$GO <- factor(ego3_to_plot$GO, levels = rev(ego3_to_plot$GO)) # Adjust factor order
   # Plot the results
-  ggplot(data = ego3_to_plot, aes(x = GO, y = NES)) +
+  ggplot(data = ego3_to_plot, aes(x = GO, y = PVAL)) +
     geom_bar(stat = "Identity", width = 0.8, color = "black", fill = "red") +
     theme(axis.text.x = element_text(angle = 90, hjust = 1)) +
     coord_flip() +
     scale_fill_gradient(low="blue", high="red") +
-    labs(y = "Normalized Enrichment Score")
+    labs(y = "-log10(adjusted p-value)")
   # ggsave(filename = paste0(analysis_name, "_GOMF_all.png"), width = 12, height = 3, units = "in")
 }
 ```
@@ -730,16 +746,17 @@ if (nrow(ego3.dn.summary) > 0) {
   # ego3.dn.summary <- ego3.dn.summary[order(ego3.dn.summary$pvalue, decreasing = FALSE), ]
   ego3_to_plot <- data.frame(GO = paste0(ego3.dn.summary$ID[1:min(nrow(ego3.dn.summary), max_GO_to_plot)], " ", 
                                          ego3.dn.summary$Description[1:min(nrow(ego3.dn.summary), max_GO_to_plot)]),
-                             NES = ego3.dn.summary$NES[1:min(nrow(ego3.dn.summary), max_GO_to_plot)]) # Normalized enrichment score
+                              NES = ego3.dn.summary$NES[1:min(nrow(ego3.dn.summary), max_GO_to_plot)], # Normalized enrichment score
+                             PVAL = -log10(ego3.dn.summary$p.adjust[1:min(nrow(ego3.dn.summary), max_GO_to_plot)]))
   # ego3_to_plot    <- ego3_to_plot[order(ego3_to_plot$NES, decreasing = FALSE), ]  # Sort by NES
   ego3_to_plot$GO <- factor(ego3_to_plot$GO, levels = rev(ego3_to_plot$GO)) # Adjust factor order
   # Plot the results
-  ggplot(data = ego3_to_plot, aes(x = GO, y = NES)) +
+  ggplot(data = ego3_to_plot, aes(x = GO, y = PVAL)) +
     geom_bar(stat = "Identity", width = 0.8, color = "black", fill = "red") +
     theme(axis.text.x = element_text(angle = 90, hjust = 1)) +
     coord_flip() +
     scale_fill_gradient(low="blue", high="red") +
-    labs(y = "Normalized Enrichment Score")
+    labs(y = "-log10(adjusted p-value)")
   # ggsave(filename = paste0(analysis_name, "_GOMF_all.png"), width = 12, height = 3, units = "in")
 }
 ```
